<resources>
    <string name="app_name">Garage</string>
    <string name="button_addGarage">Add Car To Garage</string>
    <string name="hint_garageModel">Model</string>
    <string name="hint_garageMake">Make </string>
    <string name="hint_garageYear">Year </string>
    <string name="hint_garageLitre">Litre </string>
    <string name="hint_garageDoors">Doors </string>
    <string name="menu_addGarage">Add</string>
    <string name="menu_cancelGarage">Cancel</string>
    <string name="enter_garage_title"> Please enter a Garage Title </string>
    <string name="save_garage"> Save Garage </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_garage_image">Select garage image</string>
    <string name="change_garage_image">Change garage image</string>
    <string name="garage_image">garage image</string>
    <string name="button_location">View Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_map">Map</string>
    <string name="menu_deleteGarage">Delete</string>
</resources>
